        site admin to configure a site so that the ``logout()`` function is
        supported.  (The default authentication scheme, HTTP basic auth, does
        not support logout.) See ``zope/app/security/browser/loginlogout.txt``
        for details.

      - Changed directory resources to support recursion into subdirectories.

    Bug Fixes

      - Fix #284: Bogus 404 errors with TALES traversal fails

      - Fix #298: Role/permission title and description should be messageids

      - Fix #332 : Death to IContentContainer

      - Fix #356 : Copy and Paste does not handle exceptions raised by
        ``__setitem__``

      - Made different key reference implementations comparable:
        ``IKeyReference`` interface is extended by an additional
        ``key_type_id`` attribute.

      - Fixed issue #400: i18n image broken in trunk

      - Fix #392 : adapter registry subscribers method can return None
        when it shouldn't

      - Fix 'Wiki permissions and PAU' bug reported by Paolo Invernizzi

      - Assert location if a non-public permission was specified within an
        adapter directive so that restricted adapters work with local
        authentication too.

      - Fix #313 : `importchecker.py` ignores assignment to module attributes

      - Fix #327 : File type change clears object content

      - Disabled automatic translation of message id's in TAL.

      - Fixed ``tal:replace="default"`` bug.

      - Fixed issue #380: Local Utility don't get correct removed

      - Fixed issue #369: DAV is broken on the trunk.

      - Fixed issue #407: `zope.app.publication.http.MethodNotAllowed.__str__`:
        ``request`` should be ``self.request``

      - Fixed issue #333: XML Tree doesn't load if some item
        contains non-ASCII characters

      - Fixed issue #301: Bug with ``i18n:name`` and ``i18n:translate``
        on the same element

      - The interface directive supports multiple interface types now.
